phase2_Dev/src/objects/Licensing_Transaction__c.object
<CustomObject>
    <fields>
        <fullName>Date_Activity_Ends__c</fullName>
        <label>Date Activity Ends</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Care_Resumes__c</fullName>
        <label>Date Care Resumes</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Closed__c</fullName>
        <label>Date Transaction Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_FCC_Orientation_Mod_1_Taken__c</fullName>
        <label>Date FCC Orientation Mod 1 Taken</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_FCC_Orientation_Taken__c</fullName>
        <label>Date FCC Orientation Mod 2 Taken</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Last_SIDS_Training_Taken__c</fullName>
        <label>Date Last SIDS Training Taken</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Med_Administration_Training_Taken__c</fullName>
        <inlineHelpText>Date Medical Administration Training Taken</inlineHelpText>
        <label>Date Med. Administration Training Taken</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Taken_Intro_EEC_in_MA_orientation__c</fullName>
        <inlineHelpText>Date taken the orientation training for &quot;An Introduction to Early Education and Care in Massachusetts&quot;</inlineHelpText>
        <label>Date Taken Intro EEC in MA orientation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Time_Transaction_Closed__c</fullName>
        <inlineHelpText>Date and Time this transaction was closed. This field works as the &quot;Closed Date&quot; field but provide the time in addition.</inlineHelpText>
        <label>Date / Time Transaction Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Transportation_Training_Taken__c</fullName>
        <label>Date Transportation Training Taken</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_USDA_Nutrition_Training_Taken__c</fullName>
        <label>Date USDA Nutrition Training Taken</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Upgrading_Capacity_Training_Taken__c</fullName>
        <label>Date Upgrading Capacity Training Taken</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Expiration__c</fullName>
        <description>Date of Expiration</description>
        <label>Date of Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_the_name_change_will_be_effective__c</fullName>
        <label>Date the Name Change will be Effective</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dealing_with_Child_Prot_Welfar_Descri__c</fullName>
        <inlineHelpText>Dealings with Child Protection / Child Welfare Description</inlineHelpText>
        <label>Dealing with Child Prot. / Welfar Descri</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dealings_with_Child_Prot_Child_Welfar__c</fullName>
        <inlineHelpText>Dealings with Child Protection / Child Welfare Agency</inlineHelpText>
        <label>Dealings with Child Prot. / Child Welfar</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DelState_Federal_investigation_last_5_yr__c</fullName>
        <globalPicklist>Yes_No</globalPicklist>
        <label>State Federal investigation last 5 years</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Del_Admin_Civicriminal_action_last_5_yr__c</fullName>
        <globalPicklist>Yes_No</globalPicklist>
        <label>Admin Civil criminal action last 5 years</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Del_Missing_to_move_to_Under_Review__c</fullName>
        <formula>IF(Provider__r.RecordType.Name = &quot;Family Child Care&quot; &amp;&amp; (ISBLANK(Submission_Date__c) || ISBLANK( Submitter__c )),&quot;Not Submitted - &quot;,&quot;&quot;)

&amp;

IF(Provider__r.RecordType.Name = &quot;Family Child Care&quot; &amp;&amp; Fee_Paid__c = FALSE, &quot;Fee Not Received - &quot;,&quot;&quot;)

&amp;

IF(
(
Provider__r.RecordType.Name = &quot;Family Child Care&quot; 
&amp;&amp; 
OR(RecordType.Name = &quot;FCC New License&quot;, RecordType.Name = &quot;FCC License Upgrade&quot;, RecordType.Name = &quot;FCC Renewal&quot;)
&amp;&amp;
NOT(ISPICKVAL(Tax_Certification_Status__c , &quot;Completed&quot;))
),
&quot;Tax Certification Statement not Completed (Signed) - &quot;,&quot;&quot;)

&amp;

IF(
(
Provider__r.RecordType.Name = &quot;Family Child Care&quot; 
&amp;&amp; 
OR(RecordType.Name = &quot;FCC New License&quot;, RecordType.Name = &quot;FCC License Upgrade&quot;, RecordType.Name = &quot;FCC Renewal&quot;, RecordType.Name = &quot;Change of Address&quot; )
&amp;&amp;
NOT(ISPICKVAL(Licensee_BRC_Consent_Status__c , &quot;Completed&quot;))
),
&quot;Licensee BRC Consent not Completed (Signed) - &quot;,&quot;&quot;)

&amp;

IF(
(
Provider__r.RecordType.Name = &quot;Family Child Care&quot; 
&amp;&amp; 
OR(RecordType.Name = &quot;FCC New License&quot;, RecordType.Name = &quot;FCC License Upgrade&quot;, RecordType.Name = &quot;FCC Renewal&quot;, RecordType.Name = &quot;Change of Address&quot;, RecordType.Name = &quot;FCC Change of Household&quot; )
&amp;&amp;
Other_Person_BRC_Consent_Completed__c = FALSE
),
&quot;Other Individuals BRC Consent not Signed&quot;,&quot;&quot;)</formula>
        <label>Missing to move to Under Review</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_you_administer_your_own_school__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do you administer your own school?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_you_have_medical_administration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do you have medical administration?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_you_require_referrals__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do you require referrals?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Document_Info_Missing_Initial_Date__c</fullName>
        <label>Document / Info. Missing Initial Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Document_Information_Missing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Document / Information Missing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Drinking_Water_Source__c</fullName>
        <label>Drinking Water Source</label>
        <picklist>
            <picklistValues>
                <fullName>Town Water Supply</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Water Supply</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Drop_in_Service1__c</fullName>
        <globalPicklist>Yes_No</globalPicklist>
        <label>Drop-in Service</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Drop_in_Service__c</fullName>
        <globalPicklist>Yes_No</globalPicklist>
        <label>Drop-in Service</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ECE_program_Responsible__c</fullName>
        <inlineHelpText>Person responsible for Early childhood education program</inlineHelpText>
        <label>ECE program Responsible</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EEC_Note_For_Revision__c</fullName>
        <label>EEC Note For Revision</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EmailTextForProvider2__c</fullName>
        <formula>If(SetProviderAsAssistant__c = true,&quot;You have renewed your license as a &quot; + TEXT(Provider__r.Certified_As__c) + &quot; .Therefore your previous Family Child Care license &quot;+  Provider__r.Previous_License_Number__c + &quot; is no longer valid and you are not licensed to provide family child care at your address.&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EmailTextForProvider2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailTextForProvider__c</fullName>
        <description>Used in EmailTemplate</description>
        <formula>If( Transaction_Configuration__r.Need_License_Issuance__c = true,&quot;The certificate related to this transaction has been mailed to you at the address we have on file.&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EmailTextForProvider</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Time_Afternoon_program__c</fullName>
        <description>End time of the afternoon program when program is operative.</description>
        <label>End Time (Afternoon program)</label>
        <picklist>
            <picklistValues>
                <fullName>6:00 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:30 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:00 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:30 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:00 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:30 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:00 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:30 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Noon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:00 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:30 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:00 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:30 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:00 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:30 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:00 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:30 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:00 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:30 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:00 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:30 pm</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_Time_Full_day_program__c</fullName>
        <description>End time on days when program is operative.</description>
        <label>End Time (Full day program)</label>
        <picklist>
            <picklistValues>
                <fullName>6:00 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:30 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:00 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:30 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:00 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:30 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:00 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:30 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Noon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:00 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:30 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:00 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:30 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:00 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:30 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:00 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:30 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:00 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:30 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:00 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:30 pm</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_Time_Morning_program__c</fullName>
        <description>End time of morning program on days when program is operative.</description>
        <label>End Time (Morning program)</label>
        <picklist>
            <picklistValues>
                <fullName>6:00 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:30 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:00 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:30 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:00 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:30 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:00 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:30 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Noon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:00 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:30 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:00 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:30 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:00 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:30 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:00 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:30 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:00 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:30 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:00 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:30 pm</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Equipment_Responsible__c</fullName>
        <label>Equipment Responsible</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Evening_Overnight_Weekend_Care__c</fullName>
        <label>Evening, Overnight, Weekend Care</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Evenings_Service1__c</fullName>
        <globalPicklist>Yes_No</globalPicklist>
        <label>Evenings Service</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Evenings_Service__c</fullName>
        <globalPicklist>Yes_No</globalPicklist>
        <label>Evenings Service</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Existing_Fiduciary_Admin_relationships1__c</fullName>
        <globalPicklist>Yes_No</globalPicklist>
        <label>Existing Fiduciary Admin relationships</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Existing_Fiduciary_Admin_relationships__c</fullName>
        <globalPicklist>Yes_No</globalPicklist>
        <label>Existing Fiduciary Admin relationships</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Exits_Descriptions__c</fullName>
        <label>Exits Descriptions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Experience_Caring_for_Children_QUalifica__c</fullName>
        <inlineHelpText>Experience Caring for Children Qualifications Description</inlineHelpText>
        <label>Exp. Caring for Children Qual. Descrip.</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Extended_Days_Available__c</fullName>
        <description>Days when program provides extended day service.</description>
        <label>Extended Days Available</label>
        <picklist>
            <picklistValues>
                <fullName>Monday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wednesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thursday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saturday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunday</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>FCC_Educator_Assistant_is_working_with__c</fullName>
        <inlineHelpText>Name of Family Child Care Educator you are working with?</inlineHelpText>
        <label>FCC Educator Assistant is working with</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCC_Orientation_Module_II_Evidence__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked if the FCC Orientation, Module II Evidence has been uploaded.</inlineHelpText>
        <label>FCC Orientation, Module II Evidence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FCC_Orientation_Module_I_Evidence__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FCC Orientation, Module I Evidence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FCC_Residence_Description__c</fullName>
        <label>FCC Residence Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Families_recving_case_mgmt_services__c</fullName>
        <description>Number of Families Receiving Case Management Services?</description>
        <inlineHelpText>Number of Families Receiving Case Management Services?</inlineHelpText>
        <label>Families recving case mgmt services</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Families_recving_home_study_services__c</fullName>
        <description>Number of families receiving home study services only</description>
        <inlineHelpText>Number of families receiving home study services only</inlineHelpText>
        <label>Families recving home study services</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Families_recving_information_referral__c</fullName>
        <description>Number of families receiving information and referrals</description>
        <inlineHelpText>Number of families receiving information and referrals</inlineHelpText>
        <label>Families recving information &amp; referral</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fee_Paid__c</fullName>
        <formula>Total_Payment_Received__c &gt;= Associated_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fee Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Financial_Documentation_Responsible__c</fullName>
        <label>Financial Documentation Responsible</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fire_Inspection_Issue_date__c</fullName>
        <description>Associated Inspections--&gt;Fire Inspection Issue date</description>
        <label>Fire Inspection Issue date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Aid_Certificate__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked if the First Aid Certificate has been uploaded.</inlineHelpText>
        <label>First Aid Certificate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Aid_Certification_Issue_Date__c</fullName>
        <label>First Aid Certification Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Aid_Certified__c</fullName>
        <label>First Aid Certified</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Floors_Description__c</fullName>
        <description>This field summarize the rooms that can be used for the care. It&apos;s composed of a concatenation of all rooms and updated by the system when the transaction is closed</description>
        <label>Floors Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gender_of_children_served__c</fullName>
        <label>Gender of children served</label>
        <picklist>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Group_Type__c</fullName>
        <inlineHelpText>Will your group be a small group (&lt;=10) or a large group (&gt;10)</inlineHelpText>
        <label>Group Type</label>
        <picklist>
            <picklistValues>
                <fullName>Small Group (&lt;=10)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large Group (&gt;10)</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gym_Facility_Used_During_Program_Hours1__c</fullName>
        <globalPicklist>Yes_No</globalPicklist>
        <label>Gym Facility Used During Program Hours</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gym_Facility_Used_During_Program_Hours__c</fullName>
        <globalPicklist>Yes_No</globalPicklist>
        <label>Gym Facility Used During Program Hours</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HH_Member_with_CORI_Denied__c</fullName>
        <description>Count the number of household members with CORI denied</description>
        <label>HH Member with CORI Denied</label>
        <summaryFilterItems>
            <field>Household_Member__c.CORI_Result__c</field>
            <operation>equals</operation>
            <value>Denied</value>
        </summaryFilterItems>
        <summaryForeignKey>Household_Member__c.Licensing_Transactions__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>HH_Member_with_DCF_Denied__c</fullName>
        <description>Count the number of household member with DCF denied</description>
        <label>HH Member with DCF Denied</label>
        <summaryFilterItems>
            <field>Household_Member__c.DCF_Result__c</field>
            <operation>equals</operation>
            <value>Denied</value>
        </summaryFilterItems>
        <summaryForeignKey>Household_Member__c.Licensing_Transactions__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Health_Inspection_Expiration_Date__c</fullName>
        <description>Associated Inspections--&gt;Health Inspection Expiration Date</description>
        <label>Health Inspection Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Heating_Elements__c</fullName>
        <label>Heating Elements</label>
        <picklist>
            <picklistValues>
                <fullName>Radiators, Hot Water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baseboards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas on Gas Stove (heating)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Space Heater</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vents / Grates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fireplaces</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coal / Pellet / Wood Burning Stove</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Indoor_ADA_Compliant__c</fullName>
        <description>Program status for compliance with Americans with Disabilities Act (ADA) for indoor area.</description>
        <label>Indoor ADA Compliant</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Sure</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Indoor_Outdoor_Space_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Indoor/Outdoor Space Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Indoor_Square_Footage__c</fullName>
        <inlineHelpText>Indoor Square Footage Used For The Operations</inlineHelpText>
        <label>Indoor Square Footage</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Infant_Capacity__c</fullName>
        <label>Infant Capacity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Infant_Toddler_Capacity__c</fullName>
        <description>Infant / Toddler (birth - 2yrs. 9 mos.)</description>
        <inlineHelpText>Infant / Toddler (birth - 2yrs. 9 mos.)</inlineHelpText>
        <label>Infant / Toddler Capacity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Infant_Toddler_Program_Responsible__c</fullName>
        <description>Infant/Toddler Program Responsible Name, if applicable (must be Lead Teacher Qualified)</description>
        <label>Infant/Toddler Program Responsible</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integrated_Pest_Management_Date__c</fullName>
        <description>Associated Inspections--&gt;Integrated Pest Management Date</description>
        <label>Integrated Pest Management Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>International_adoption_countries__c</fullName>
        <label>International adoption countries</label>
        <picklist>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Korea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ethiopia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Congo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nigeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uganda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other(s)</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>IsAssistantUpgradeGT6__c</fullName>
        <description>Checks to see if the assistant is upgrade to &gt; 6  for their license</description>
        <formula>!(
     ISPICKVAL(Provider__r.License_Type__c, &apos;Certified Family Child Care Assistant (8)&apos;) &amp;&amp; 
     ISPICKVAL(Provider__r.License_Type__c, &apos;Certified Family Child Care Assistant (10)&apos;)) 
&amp;&amp; 
(
     ISPICKVAL(License_Requested__c, &apos;Certified Family Child Care Assistant (8)&apos;) || 
     ISPICKVAL(License_Requested__c, &apos;Certified Family Child Care Assistant (10)&apos;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsAssistantUpgradeGT6</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>